--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -39,14 +39,18 @@
                 <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
             </div>
             <div class="illustration">
-                <img src="../css/img/foto-equipe.png" alt="Team Illustration">
+                <img src="../css/img/caixas.png" alt="Team Illustration">
             </div>
         </section>
         <div class="opcaofree">
-        <p>Empregados</p>
-        <button class="toggle-btn left"></button>
-        <p>FreeLancers</p>
-    </div>
+            <div class="container">
+                <p class="left">Empregados</p>
+                <div class="divisao"></div> <!-- Linha divisória centralizada -->
+                <p class="right">FreeLancers</p>
+                <button class="toggle-btn left"></button> <!-- Botão que se move -->
+            </div>
+        </div>
+        
         <div class="pesquisa">
             <input type="text" id="pesquisa" placeholder="Buscar Motorista"> <!-- Atualizado para refletir a busca por motoristas -->
         </div>
@@ -58,3 +62,5 @@
     </main>
 </body>
 </html>
+
+
