modal detalhes viagem correto abrindo mais rapido agora

--- a/html/viagens.html
+++ b/html/viagens.html
@@ -30,6 +30,7 @@
                 <a href="./perfilEmpresa.html">Perfil</a>
             </ul>
             <a href="./chat.html"><button class="botao-chat">Chat</button></a>
+            <!-- <button class="botao-chat" id="openModal">Viagem</button> -->
         </div>
     </header>
     <div class="pesquisa">
