iniciando ediçao de perfil

--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -38,7 +38,7 @@
                 <a href="./perfilEmpresa.html">Perfil</a>
                 <a href="./chat.html">Chat</a>
             </ul>
-            <button class="botao-chat" onclick="criarViagem(event)">
+            <button class="botao-chat" id="openModal" onclick="criarViagem(event)">
                 <img src="../css/img/localizacao.png" alt="localizacao" height="25">
                 Nova Viagem
             </button>            
