--- a/html/perfilEmpresa.html
+++ b/html/perfilEmpresa.html
@@ -47,9 +47,9 @@
                 <input type="text" id="razaoSocial" placeholder="Razão Social" required disabled>
             </div>
             <div class="botoes">
-                <button class="botaoEditar">Editar perfil</button>
+                <button class="botao">Editar perfil</button>
                 <button class="botao">CEP</button>
-                <button class="botaoExcluir">Excluir perfil</button>
+                <button class="botao">Excluir perfil</button>
             </div>
         </div>
     </form>
