--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
         rel="stylesheet">
     <title>TransportaWeb</title>
     <link rel="stylesheet" href="../css/paginaHome.css">
@@ -19,11 +17,7 @@
     <script src="../js/grafico.js" defer type="module"></script>
     <script src="../js/viagens.js" defer type="module"></script>
 </head>
-
-
 <body>
-
-
     <header>
         <div class="profile-container">
             <img src="" id="foto-url" alt="Foto de Perfil">
@@ -41,11 +35,30 @@
             <button class="botao-chat" id="openModal" onclick="criarViagem(event)">
                 <img src="../css/img/localizacao.png" alt="localizacao" height="25">
                 Nova Viagem
-            </button>            
+            </button>
+            <!-- Botão de Notificações -->
+            <button class="botao-notificacoes" id="openNotificationModal">
+                <img src="../css/img/sino-de-notificacao.png" alt="notificações" height="55">
+            </button>
         </div>
     </header>
-
-
+    <!-- Modal de Notificações -->
+    <div class="notification-modal" id="notificationModal">
+        <div class="modal-header">
+            <button class="close-modal" id="closeNotificationModal">&times;</button>
+            <h2>Notificações</h2>
+        </div>
+        <div class="modal-body">
+            <p>João Silva de Santos deseja fazer parte da sua organização. 
+                <button class="action-btn accept">Aceitar</button> 
+                <button class="action-btn deny">Negar</button>
+            </p>
+            <p>João Silva de Santos aceitou uma corrida. 
+                <button class="action-btn details">Ver detalhes</button>
+            </p>
+            <p>João Silva de Santos mandou uma mensagem.</p>
+        </div>
+    </div>
     <main>
         <div class="message-container">
             <div class="message">
@@ -56,22 +69,17 @@
                     logística. Com soluções avançadas, oferecemos uma maneira simples e inteligente de otimizar o
                     gerenciamento da sua frota e tomar decisões mais assertivas.</p>
             </div>
-
-
             <div class="image-message">
                 <img src="../css/img/caminhaohome.jpg" alt="caminhao">
             </div>
         </div>
-
         <div class="dashboard-container">
             <div class="cards">
                 <div class="all-trips-card">
-
                     <div class="text-trips">
                         <div class="title-trips">Total de viagens realizadas:</div>
                         <div class="all-trips">100</div>
                     </div>
-
                     <div class="image-trips">
                         <img src="../css/img/estatistica.png" alt="estatistica">
                     </div>
@@ -104,26 +112,25 @@
                 </div>
             </div>
         </div>
-
-        </div>
-
-
-
-
-
-        <!-- <div class="card">
-            <div class="card-header">
-                <h3>Total de Viagens Realizadas</h3>
-            </div>
-            <div class="card-body">
-                <p id="totalViagens">Carregando...</p>
-            </div>
-        </div> -->
-
-
-
     </main>
+    <script>
+        // Abrir o modal
+        document.getElementById('openNotificationModal').addEventListener('click', () => {
+            const modal = document.getElementById('notificationModal');
+            modal.style.display = 'block';
+        });
+        // Fechar o modal
+        document.getElementById('closeNotificationModal').addEventListener('click', () => {
+            const modal = document.getElementById('notificationModal');
+            modal.style.display = 'none';
+        });
+        // Fechar ao clicar fora do modal
+        window.addEventListener('click', (event) => {
+            const modal = document.getElementById('notificationModal');
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    </script>
 </body>
-
-
 </html>
