cadastro de veiculos

--- a/html/cadastroveiculo.html
+++ b/html/cadastroveiculo.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
-  <title>Cadastro de Veículos</title>
-  <link rel="stylesheet" href="../css/cadastroveiculo.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/cadastroVeiculo.css">
+  <link rel="stylesheet" href="../css/root.css">
+  <script src="../js/cadastroVeiculo.js" defer type="module" ></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link
+  href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  rel="stylesheet">
+   <title>Cadastro de Veículos</title>
 </head>
 <body>
-  <div class="container">
-    <div class="form-container">
-      <a href="../html/paginaHome.html" class="back-button">◀️ Voltar</a>
-      <form>
-        <div class="form-group">
-          <label for="placa">Placa do veículo:</label>
-          <input type="text" id="placa" placeholder="BEE-4R22">
-        </div>
-        <div class="form-group">
-          <label for="ano">Ano:</label>
-          <input type="text" id="ano" placeholder="2000">
-        </div>
-        <div class="form-group">
-          <label for="modelo">Modelo do veículo:</label>
-          <input type="text" id="modelo" placeholder="Volkswagen Constellation">
-        </div>
-        <div class="form-group">
-          <label for="capacidade">Capacidade de carga:</label>
-          <input type="text" id="capacidade" placeholder="Peso">
-        </div>
-        <div class="form-group">
-          <label for="tipo">Tipo do veículo:</label>
-          <input type="text" id="tipo" placeholder="Caminhão">
-        </div>
-        <button type="submit" class="submit-button">Finalizar ></button>
-      </form>
-    </div>
-    <div class="info-container">
-      <h2>Cadastro de veículos</h2>
-      <p>Aqui você pode registrar seu caminhão de forma rápida e fácil. O cadastro é essencial para garantir um melhor gerenciamento da frota e facilitar a logística.</p>
-      <img src="../css/img/pneus.png" alt="Imagem de pneus">
-    </div>
-  </div>
+   <main>
+       <section class="content-area">
+        <a href="./paginaHome.html">
+            <div class="go-back">
+                <div class="arow"></div>
+                <h1>Voltar</h1>
+            </div>
+        </a>
+           <div class="input-area">
+               <div class="section-1">
+                   <div class="input">
+                       <p>Placa do veículo:</p>
+                       <input type="text" placeholder="Informe a placa do veículo" id="placaVeiculo">
+                   </div>
+                   <div class="input">
+                       <p>Ano:</p>
+                       <input type="text" placeholder="Informe o ano do veículo" id="anoVeiculo">
+                   </div>
+               </div>
+               <div class="section-2">
+                   <div class="input">
+                       <p>Modelo do veículo:</p>
+                       <input type="text" placeholder="Informe o modelo do veículo" id="modeloVeiculo">
+                   </div>
+                   <div class="input">
+                       <p>Capacidade de carga:</p>
+                       <input type="text" placeholder="Informe a capacidade de carga do veículo" id="capacidadeVeiculo">
+                   </div>
+                   <div class="input">
+                       <p>Tipo do veículo:</p>
+                       <input type="text" placeholder="Informe o tipo do veículo" id="tipoVeiculo">
+                   </div>
+               </div>
+               <div class="botao-area">
+                <button class="botao" id="botao">Finalizar</button>
+               </div>
+           </div>
+
+
+
+
+       </section>
+       <section class="image-area">
+           <div class="tittle">Cadastro de veículos</div>
+           <div class="text">Aqui você pode registrar seu caminhão de forma rápida e fácil. O cadastro é essencial para garantir um melhor gerenciamento da frota e facilitar a logística</div>
+           <div class="image">
+               <img src="../css/img/roda.png" alt="roda" width="550">
+           </div>
+       </section>
+   </main>
+ 
 </body>
 </html>
