--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -92,14 +92,16 @@
                         <div class="text-card">
                             Tenha controle total de todos os veículos da sua empresa em um só lugar!
                         </div>
-                        <div class="button-area-transition">
-                            <button class="learn-more">
-                                <span class="circle" aria-hidden="true">
-                                    <span class="icon arrow"></span>
-                                </span>
-                                <span class="button-text">Continuar</span>
-                            </button>
-                        </div>
+                        <a href="./cadastroVeiculo.html">
+                            <div class="button-area-transition">
+                                <button class="learn-more">
+                                    <span class="circle" aria-hidden="true">
+                                        <span class="icon arrow"></span>
+                                    </span>
+                                    <span class="button-text">Continuar</span>
+                                </button>
+                            </div>
+                        </a> 
                     </div>
                     <div class="image-card">
                         <img src="../css/img/caixacaindo.png" alt="carrinhodemao" height="250">
