--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -11,6 +11,7 @@
     <title>TransportaWeb</title>
     <link rel="stylesheet" href="../css/motoristas.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/notificacao.css">
     <link rel="stylesheet" href="../css/root.css">
     <script src="../js/funcoes.js" type="module" defer></script>
     <script src="../js/motoristas.js" type="module" defer></script>
@@ -24,12 +25,24 @@
         <div class="content-area">
             <ul class="navbar">
                 <a href="./paginaHome.html">Home</a>
+                <a href="./equipe.html">Equipe</a>
                 <a href="./viagens.html">Viagens</a>
                 <a href="./motoristas.html">Motoristas</a>
                 <a href="./ceps.html">Ceps</a>
-                <a href="./perfilEmpresa.html">Perfil</a>
             </ul>
-            <a href="./chat.html"><button class="botao-chat">Chat</button></a>
+            <div class="notificacao-botao">
+                <div class="buttons-area">
+                    <a href="./chat.html">
+                        <button class="botao-chat">
+                            <img src="../css/img/chat.png" alt="chat" height="25">
+                            Chat
+                        </button>
+                    </a>
+                </div>
+                <button class="botao-notificacoes" id="openNotificationModal">
+                    <img src="../css/img/sino-de-notificacao.png" alt="notificações" height="45">
+                </button>
+            </div> 
         </div>
     </header>
     <main>
