--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -1,80 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>TransportaWeb</title>
-    <link rel="stylesheet" href="../css/motoristas.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/notificacao.css">
-    <link rel="stylesheet" href="../css/root.css">
-    <script src="../js/funcoes.js" type="module" defer></script>
-    <script src="../js/motoristas.js" type="module" defer></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+   <title>TransportaWeb</title>
+   <link rel="stylesheet" href="../css/motoristas.css">
+   <link rel="stylesheet" href="../css/navbar.css">
+   <link rel="stylesheet" href="../css/root.css">
+   <script src="../js/funcoes.js" type="module" defer></script>
+   <script src="../js/motoristas.js" type="module" defer></script>
 </head>
 <body>
-    <header>
-        <div class="profile-container">
-            <img src="" id="foto-url" alt="Foto de Perfil">
-            <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
-        </div>
-        <div class="content-area">
-            <ul class="navbar">
-                <a href="./paginaHome.html">Home</a>
-                <a href="./equipe.html">Equipe</a>
-                <a href="./viagens.html">Viagens</a>
-                <a href="./motoristas.html">Motoristas</a>
-                <a href="./ceps.html">Ceps</a>
-            </ul>
-            <div class="notificacao-botao">
-                <div class="buttons-area">
-                    <a href="./chat.html">
-                        <button class="botao-chat">
-                            <img src="../css/img/chat.png" alt="chat" height="25">
-                            Chat
-                        </button>
-                    </a>
-                </div>
-                <button class="botao-notificacoes" id="openNotificationModal">
-                    <img src="../css/img/sino-de-notificacao.png" alt="notificações" height="45">
-                </button>
-            </div> 
-        </div>
-    </header>
-    <main>
-        <section class="control-section">
-            <div class="text">
-                <h1>Tenha Controle Total da Sua Equipe!</h1>
-                <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
-            </div>
-            <div class="illustration">
-                <img src="../css/img/caixas.png" alt="Team Illustration">
-            </div>
-        </section>
+   <header>
+       <div class="profile-container">
+           <img src="" id="foto-url" alt="Foto de Perfil">
+           <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
+       </div>
+       <div class="content-area">
+           <ul class="navbar">
+               <a href="./paginaHome.html">Home</a>
+               <a href="./viagens.html">Viagens</a>
+               <a href="./motoristas.html">Motoristas</a>
+               <a href="./ceps.html">Ceps</a>
+               <a href="./perfilEmpresa.html">Perfil</a>
+           </ul>
+           <a href="./chat.html"><button class="botao-chat">Chat</button></a>
+       </div>
+   </header>
+   <main>
+       <section class="control-section">
+           <div class="text">
+               <h1>Tenha Controle Total da Sua Equipe!</h1>
+               <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
+           </div>
+           <div class="illustration">
+               <img src="../css/img/caixas.png" alt="Team Illustration">
+           </div>
+       </section>
 
-        <div class="pesquisa">
-            <input type="text" id="pesquisa" placeholder="Buscar Motorista"> <!-- Atualizado para refletir a busca por motoristas -->
-        </div>
-        <div class="opcaofree">
-            <div class="container">
-                <p class="left">Empregados</p>
-                <div class="divisao"></div> <!-- Linha divisória centralizada -->
-                <p class="right">FreeLancers</p>
-                <button class="toggle-btn left"></button> <!-- Botão que se move -->
-            </div>
-        </div>
-        
-        <div class="grow flex">
-            <div class="container-cards" id="container-cards">
-                <!-- Os cards dos motoristas serão inseridos aqui -->
-            </div>
-        </div>
-    </main>
+       <div class="pesquisa">
+           <input type="text" id="pesquisa" placeholder="Buscar Motorista"> <!-- Atualizado para refletir a busca por motoristas -->
+       </div>
+
+       
+       <div class="grow flex">
+           <div class="container-cards" id="container-cards">
+               <!-- Os cards dos motoristas serão inseridos aqui -->
+           </div>
+       </div>
+   </main>
 </body>
 </html>
-
-
