--- a/html/equipe.html
+++ b/html/equipe.html
@@ -8,8 +8,8 @@
    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <title>TransportaWeb</title>
-   <link rel="stylesheet" href="../css/motoristas.css">
+   <title>Equipe</title>
+   <link rel="stylesheet" href="../css/equipe.css">
    <link rel="stylesheet" href="../css/navbar.css">
    <link rel="stylesheet" href="../css/notificacao.css">
    <link rel="stylesheet" href="../css/root.css">
@@ -53,20 +53,10 @@
                <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
            </div>
            <div class="illustration">
-               <img src="../css/img/caixas.png" alt="Team Illustration">
+               <img src="../css/img/equipe.png" alt="Team Illustration">
            </div>
        </section>
 
-       <div class="pesquisa">
-           <input type="text" id="pesquisa" placeholder="Buscar Motorista"> <!-- Atualizado para refletir a busca por motoristas -->
-       </div>
-
-       
-       <div class="grow flex">
-           <div class="container-cards" id="container-cards">
-               <!-- Os cards dos motoristas serão inseridos aqui -->
-           </div>
-       </div>
    </main>
 </body>
 </html>
