--- a/html/detalhesMotorista.html
+++ b/html/detalhesMotorista.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/detalhesMotorista.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
+        rel="stylesheet">
     <script src="../js/detalhesMotorista.js" defer type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -47,8 +50,11 @@
             <h1 id="motoristaNome"></h1>
             <p id="motoristaTelefone"></p>
             <p id="motoristaEmail"></p>
+            <p id="motoristaCpf"></p>
+            <p id="motoristaCnh"></p>
+            <p id="motoristaDataNascimento"></p>
+            <p id="motoristaDisponibilidade"></p>            
         </section>
-
         <button class="add-team">
             <span>Adicionar na equipe</span>
         </button>
