add icon na barra do topo

--- a/html/ceps.html
+++ b/html/ceps.html
@@ -12,6 +12,7 @@
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script src="../js/ceps.js" defer></script>
     <title>Endereços dos CEPs</title>
+    <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="../css/ceps.css">
 </head>
 <body>
