--- a/html/cadastro-motorista2.html
+++ b/html/cadastro-motorista2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Empresa</title>
+    <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
     <script type="module" src="../js/cadastro-empresa1.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
