--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
         rel="stylesheet">
     <title>TransportaWeb</title>
+    <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="../css/paginaHome.css">
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/navbar.css">
