--- a/html/viagens.html
+++ b/html/viagens.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>TransportaWeb</title>
+    <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="../css/viagens.css">
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/navbar.css">
