--- a/html/cadastroveiculo.html
+++ b/html/cadastroveiculo.html
@@ -3,6 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/cadastroVeiculo.css">
   <link rel="stylesheet" href="../css/root.css">
   <script src="../js/cadastroVeiculo.js" defer type="module" ></script>
