--- a/html/detalhesMotorista.html
+++ b/html/detalhesMotorista.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <title>TransportaWeb</title>
     <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
+    <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/paginaHome.css">
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/navbar.css">
