--- a/html/equipe.html
+++ b/html/equipe.html
@@ -9,6 +9,7 @@
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    <title>Equipe</title>
+   <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
    <link rel="stylesheet" href="../css/equipe.css">
    <link rel="stylesheet" href="../css/navbar.css">
    <link rel="stylesheet" href="../css/notificacao.css">
