--- a/html/perfilEmpresa.html
+++ b/html/perfilEmpresa.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Perfil motorista </title>
-   <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
+   <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
+   
    <script type="module" src="../js/perfilE.js" defer></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <link rel="stylesheet" href="../css/perfilEmpresa.css">
