--- a/html/sobre-nos.html
+++ b/html/sobre-nos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransportaWeb</title>
-    <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
+    <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/quem-somos.css">
 </head>
 <body>
