--- a/html/viagens.html
+++ b/html/viagens.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -31,13 +33,15 @@
                 <a href="./motoristas.html">Motoristas</a>
                 <a href="./ceps.html">Ceps</a>
                 <a href="./chat.html">Chat</a>
+                
             </ul>
-            <div class="notificacao-botao">
-                <div class="buttons-area">
-                    <button class="botao-viagem" id="openModal">
-                        <img src="../css/img/localizacao.png" alt="localizacao" height="25">
-                        Nova Viagem
-                    </button>
+                    <div class="notificacao-botao">
+                        <div class="buttons-area">
+                            <button class="botao-viagem" id="openModal">
+                                <img src="../css/img/localizacao.png" alt="localizacao" height="25">
+                                Nova Viagem
+                            </button>
+                    
                 </div>
                 <button class="botao-notificacoes" id="openNotificationModal">
                     <img src="../css/img/sino-de-notificacao.png" alt="notificações" height="45">
@@ -107,7 +111,7 @@
                     <div class="form-group">
                         <span class="detalhes">Motorista ID:</span>
                         <select id="id_motorista" name="id_motorista" required>
-                            <option value="selecione">Selecione um motorista:</option>
+                            <option value="selecione">Freelancer</option>
                             <!-- <option value="12345">12345</option>
                             <option value="67890">67890</option> -->
                             <!-- Adicione mais opções aqui, conforme necessário -->
