--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>TransportaWeb</title>
-    <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/motoristas.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/notificacao.css">
-    <link rel="stylesheet" href="../css/root.css">
-    <script src="../js/funcoes.js" type="module" defer></script>
-    <script src="../js/motoristas.js" type="module" defer></script>
-
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link
+   href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
+   rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+   <title>TransportaWeb</title>
+   <link rel="stylesheet" href="../css/motoristas.css">
+   <link rel="stylesheet" href="../css/navbar.css">
+   <link rel="stylesheet" href="../css/notificacao.css">
+   <link rel="stylesheet" href="../css/root.css">
+   <script src="../js/funcoes.js" type="module" defer></script>
+   <script src="../js/motoristas.js" type="module" defer></script>
 </head>
 <body>
    <header>
@@ -28,6 +27,7 @@
        <div class="content-area">
         <ul class="navbar">
             <a href="./paginaHome.html">Home</a>
+            <a href="./equipe.html">Equipe</a>
             <a href="./viagens.html">Viagens</a>
             <a href="./motoristas.html">Motoristas</a>
             <a href="./ceps.html">Ceps</a>
@@ -51,8 +51,8 @@
    <main>
        <section class="control-section">
            <div class="text">
-               <h1>Tenha Controle Total da Sua Equipe!</h1>
-               <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
+               <h1>Tenha controle de tudo!</h1>
+               <p>Tenha acesso a um relatório completo de todos os motoristas registrados. Simplifique a administração com informações atualizadas e organizadas em um único lugar.</p>
            </div>
            <div class="illustration">
                <img src="../css/img/caixas.png" alt="Team Illustration">
