--- a/html/equipe.html
+++ b/html/equipe.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Equipe</title>
+    <title>Equipe - TransportaWeb</title>
     <link rel="stylesheet" href="../css/equipe.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/notificacao.css">
