--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -31,6 +31,7 @@
         <div class="content-area">
             <ul class="navbar">
                 <a href="./paginaHome.html">Home</a>
+                <a href="./equipe.html">Equipe</a>
                 <a href="./viagens.html">Viagens</a>
                 <a href="./motoristas.html">Motoristas</a>
                 <a href="./ceps.html">Ceps</a>
